// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component PossiblyMyRecords renders active filters 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container StandardPage css-164hai-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-body1 css-10k4br5-MuiTypography-root"
        data-analyticsid="page-title"
        data-testid="page-title"
        id="page-title"
      >
        Claim possible works
      </h2>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    />
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item css-sxhaxy-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
            data-testid="standard-card-no-matching-works-found"
            id="standard-card-no-matching-works-found"
            style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
          >
            <div
              class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
            >
              <div
                class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
              >
                <h3
                  class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
                  data-testid="standard-card-no-matching-works-found-header"
                  id="standard-card-no-matching-works-found-header"
                >
                  No matching works found
                </h3>
              </div>
            </div>
            <div
              class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
              data-analyticsid="standard-card-no-matching-works-found-content"
              data-testid="standard-card-no-matching-works-found-content"
              id="standard-card-no-matching-works-found-content"
            >
              <div>
                <p>
                  No works were automatically matched for you to claim.
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-sm-3 css-1stxm6x-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-2iyoae-MuiGridLegacy-root"
            >
              <div
                class="MuiTypography-root MuiTypography-h6 StandardRighthandCard-title css-j4livs-MuiTypography-root"
              >
                Refine results
              </div>
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
            >
              <hr
                class="MuiDivider-root MuiDivider-fullWidth css-nvjyq9-MuiDivider-root"
              />
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
            >
              <span
                class="facetsFilter empty"
                data-testid="empty-facet-filters"
                id="empty-facet-filters"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component PossiblyMyRecords renders alert when the hide pub api fails 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container StandardPage css-164hai-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-body1 css-10k4br5-MuiTypography-root"
        data-analyticsid="page-title"
        data-testid="page-title"
        id="page-title"
      >
        Claim possible works
      </h2>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    />
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item css-sxhaxy-MuiGridLegacy-root"
    >
      <div
        data-testid="alert"
        style="margin-top: 5px;"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-container css-1q04yrf-MuiGridLegacy-root"
          data-analyticsid="alert-error"
          data-testid="alert-error"
          id="alert-error"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-true css-40g213-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-container css-mcuokg-MuiGridLegacy-root"
            >
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item alert-icon css-19gcae9-MuiGridLegacy-root"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-1umw9bq-MuiSvgIcon-root"
                  data-testid="ErrorIcon"
                  focusable="false"
                  id="error-icon"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z"
                  />
                </svg>
              </div>
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true alert-text css-1s0jjal-MuiGridLegacy-root"
              >
                <b>
                  Error - 
                </b>
                <span
                  data-testid="alert-message"
                >
                  Error has occurred during request and request cannot be processed. Test error message Please contact eSpace administrators or try again later.
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
            data-testid="standard-card-no-matching-works-found"
            id="standard-card-no-matching-works-found"
            style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
          >
            <div
              class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
            >
              <div
                class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
              >
                <h3
                  class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
                  data-testid="standard-card-no-matching-works-found-header"
                  id="standard-card-no-matching-works-found-header"
                >
                  No matching works found
                </h3>
              </div>
            </div>
            <div
              class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
              data-analyticsid="standard-card-no-matching-works-found-content"
              data-testid="standard-card-no-matching-works-found-content"
              id="standard-card-no-matching-works-found-content"
            >
              <div>
                <p>
                  No works were automatically matched for you to claim.
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component PossiblyMyRecords renders list of publications and counts and facets 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container StandardPage css-164hai-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-body1 css-10k4br5-MuiTypography-root"
        data-analyticsid="page-title"
        data-testid="page-title"
        id="page-title"
      >
        Claim possible works
      </h2>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    />
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item css-sxhaxy-MuiGridLegacy-root"
    >
      <span
        class="MuiBox-root css-0"
        data-testid="confirmDialogBox"
      />
      <div
        class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-md-9 css-g93h27-MuiGridLegacy-root"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
            data-testid="standard-card"
            id="standard-card"
            style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
          >
            <div
              class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
              data-analyticsid="standard-card-content"
              data-testid="standard-card-content"
              id="standard-card-content"
            >
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-t4ynyp-MuiTypography-root"
                >
                  3 out of 5 potential match(es) displayed. Select any item to claim it as your work.
                </p>
              </div>
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
                style="margin-top: 16px;"
              >
                <div
                  class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
                >
                  <div
                    class="MuiBox-root css-0"
                    data-testid="search-results-publications-list"
                    id="search-results-publications-list"
                  >
                    <div
                      class="publicationCitation"
                    >
                      <div
                        class="css-0"
                        data-testid="publication-citation-parent-UQ:1"
                        id="publication-citation-parent-UQ:1"
                      >
                        <div
                          class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
                        >
                          <div
                            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
                          >
                            <div
                              class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
                            >
                              <div
                                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
                                style="min-width: 1px;"
                              >
                                <h6
                                  class="MuiTypography-root MuiTypography-h6 PublicationCitation-citationTitle css-6on8jz-MuiTypography-root"
                                >
                                  <a
                                    href="/view/UQ:1"
                                  >
                                    1
                                  </a>
                                </h6>
                              </div>
                              <div
                                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-1ulg1rp-MuiGridLegacy-root"
                              >
                                <div>
                                  Citation display not available for 
                                </div>
                              </div>
                              <div
                                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
                              >
                                <div
                                  class="MuiGridLegacy-root MuiGridLegacy-container css-4zaipq-MuiGridLegacy-root"
                                >
                                  <div
                                    class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-wx9gf7-MuiGridLegacy-root"
                                  >
                                    <div
                                      class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
                                    >
                                      <div
                                        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-auto css-e9j1q9-MuiGridLegacy-root"
                                      >
                                        <a
                                          aria-label="Full citation in Google scholar will open in a new window"
                                          class="googleCitationCount css-si3g8d"
                                          data-analyticsid="google-citation-count-link"
                                          data-testid="google-citation-count-link"
                                          href="https://scholar.google.com/scholar?q=intitle:1"
                                          id="google-citation-count-link"
                                          rel="noopener noreferrer"
                                          tabindex="0"
                                          target="_blank"
                                          title="Full citation in Google scholar will open in a new window"
                                        >
                                          <span
                                            class="fez-icon google large"
                                          />
                                        </a>
                                        <span
                                          class="noOaIcon"
                                          data-testid="oa-n/a-icon"
                                        />
                                      </div>
                                      <div
                                        class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
                                      />
                                      <div
                                        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1n3v6zn-MuiGridLegacy-root"
                                      />
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-8slyrk-MuiGridLegacy-root"
                        >
                          <div
                            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1n3v6zn-MuiGridLegacy-root"
                          />
                          <div
                            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-auto css-e9j1q9-MuiGridLegacy-root"
                          >
                            <button
                              class="MuiButtonBase-root MuiButton-root UQ1 MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root UQ1 MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth publicationAction buttonOrder0 css-alav1n-MuiButtonBase-root-MuiButton-root"
                              data-analyticsid="publication-action-UQ1-primary"
                              data-testid="publication-action-UQ1-primary"
                              tabindex="0"
                              type="button"
                            >
                              Claim this work
                            </button>
                          </div>
                          <div
                            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-auto css-e9j1q9-MuiGridLegacy-root"
                          >
                            <button
                              class="MuiButtonBase-root MuiButton-root UQ1 MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root UQ1 MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth publicationAction buttonOrder1 css-1n5sf3i-MuiButtonBase-root-MuiButton-root"
                              data-testid="publication-action-UQ1-secondary"
                              tabindex="0"
                              type="button"
                            >
                              Not mine
                            </button>
                          </div>
                        </div>
                      </div>
                      <hr
                        class="MuiDivider-root MuiDivider-fullWidth css-zww2ny-MuiDivider-root"
                      />
                    </div>
                    <div
                      class="publicationCitation"
                    >
                      <div
                        class="css-0"
                        data-testid="publication-citation-parent-UQ:2"
                        id="publication-citation-parent-UQ:2"
                      >
                        <div
                          class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
                        >
                          <div
                            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
                          >
                            <div
                              class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
                            >
                              <div
                                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
                                style="min-width: 1px;"
                              >
                                <h6
                                  class="MuiTypography-root MuiTypography-h6 PublicationCitation-citationTitle css-6on8jz-MuiTypography-root"
                                >
                                  <a
                                    href="/view/UQ:2"
                                  >
                                    2
                                  </a>
                                </h6>
                              </div>
                              <div
                                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-1ulg1rp-MuiGridLegacy-root"
                              >
                                <div>
                                  Citation display not available for 
                                </div>
                              </div>
                              <div
                                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
                              >
                                <div
                                  class="MuiGridLegacy-root MuiGridLegacy-container css-4zaipq-MuiGridLegacy-root"
                                >
                                  <div
                                    class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-wx9gf7-MuiGridLegacy-root"
                                  >
                                    <div
                                      class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
                                    >
                                      <div
                                        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-auto css-e9j1q9-MuiGridLegacy-root"
                                      >
                                        <a
                                          aria-label="Full citation in Google scholar will open in a new window"
                                          class="googleCitationCount css-si3g8d"
                                          data-analyticsid="google-citation-count-link"
                                          data-testid="google-citation-count-link"
                                          href="https://scholar.google.com/scholar?q=intitle:2"
                                          id="google-citation-count-link"
                                          rel="noopener noreferrer"
                                          tabindex="0"
                                          target="_blank"
                                          title="Full citation in Google scholar will open in a new window"
                                        >
                                          <span
                                            class="fez-icon google large"
                                          />
                                        </a>
                                        <span
                                          class="noOaIcon"
                                          data-testid="oa-n/a-icon"
                                        />
                                      </div>
                                      <div
                                        class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
                                      />
                                      <div
                                        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1n3v6zn-MuiGridLegacy-root"
                                      />
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-8slyrk-MuiGridLegacy-root"
                        >
                          <div
                            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1n3v6zn-MuiGridLegacy-root"
                          />
                          <div
                            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-auto css-e9j1q9-MuiGridLegacy-root"
                          >
                            <button
                              class="MuiButtonBase-root MuiButton-root UQ2 MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root UQ2 MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth publicationAction buttonOrder0 css-alav1n-MuiButtonBase-root-MuiButton-root"
                              data-analyticsid="publication-action-UQ2-primary"
                              data-testid="publication-action-UQ2-primary"
                              tabindex="0"
                              type="button"
                            >
                              Claim this work
                            </button>
                          </div>
                          <div
                            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-auto css-e9j1q9-MuiGridLegacy-root"
                          >
                            <button
                              class="MuiButtonBase-root MuiButton-root UQ2 MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root UQ2 MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth publicationAction buttonOrder1 css-1n5sf3i-MuiButtonBase-root-MuiButton-root"
                              data-testid="publication-action-UQ2-secondary"
                              tabindex="0"
                              type="button"
                            >
                              Not mine
                            </button>
                          </div>
                        </div>
                      </div>
                      <hr
                        class="MuiDivider-root MuiDivider-fullWidth css-zww2ny-MuiDivider-root"
                      />
                    </div>
                    <div
                      class="publicationCitation"
                    >
                      <div
                        class="css-0"
                        data-testid="publication-citation-parent-UQ:3"
                        id="publication-citation-parent-UQ:3"
                      >
                        <div
                          class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
                        >
                          <div
                            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
                          >
                            <div
                              class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
                            >
                              <div
                                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
                                style="min-width: 1px;"
                              >
                                <h6
                                  class="MuiTypography-root MuiTypography-h6 PublicationCitation-citationTitle css-6on8jz-MuiTypography-root"
                                >
                                  <a
                                    href="/view/UQ:3"
                                  >
                                    3
                                  </a>
                                </h6>
                              </div>
                              <div
                                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-1ulg1rp-MuiGridLegacy-root"
                              >
                                <div>
                                  Citation display not available for 
                                </div>
                              </div>
                              <div
                                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
                              >
                                <div
                                  class="MuiGridLegacy-root MuiGridLegacy-container css-4zaipq-MuiGridLegacy-root"
                                >
                                  <div
                                    class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-wx9gf7-MuiGridLegacy-root"
                                  >
                                    <div
                                      class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
                                    >
                                      <div
                                        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-auto css-e9j1q9-MuiGridLegacy-root"
                                      >
                                        <a
                                          aria-label="Full citation in Google scholar will open in a new window"
                                          class="googleCitationCount css-si3g8d"
                                          data-analyticsid="google-citation-count-link"
                                          data-testid="google-citation-count-link"
                                          href="https://scholar.google.com/scholar?q=intitle:3"
                                          id="google-citation-count-link"
                                          rel="noopener noreferrer"
                                          tabindex="0"
                                          target="_blank"
                                          title="Full citation in Google scholar will open in a new window"
                                        >
                                          <span
                                            class="fez-icon google large"
                                          />
                                        </a>
                                        <span
                                          class="noOaIcon"
                                          data-testid="oa-n/a-icon"
                                        />
                                      </div>
                                      <div
                                        class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
                                      />
                                      <div
                                        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1n3v6zn-MuiGridLegacy-root"
                                      />
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-8slyrk-MuiGridLegacy-root"
                        >
                          <div
                            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1n3v6zn-MuiGridLegacy-root"
                          />
                          <div
                            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-auto css-e9j1q9-MuiGridLegacy-root"
                          >
                            <button
                              class="MuiButtonBase-root MuiButton-root UQ3 MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root UQ3 MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth publicationAction buttonOrder0 css-alav1n-MuiButtonBase-root-MuiButton-root"
                              data-analyticsid="publication-action-UQ3-primary"
                              data-testid="publication-action-UQ3-primary"
                              tabindex="0"
                              type="button"
                            >
                              Claim this work
                            </button>
                          </div>
                          <div
                            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-auto css-e9j1q9-MuiGridLegacy-root"
                          >
                            <button
                              class="MuiButtonBase-root MuiButton-root UQ3 MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root UQ3 MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-fullWidth publicationAction buttonOrder1 css-1n5sf3i-MuiButtonBase-root-MuiButton-root"
                              data-testid="publication-action-UQ3-secondary"
                              tabindex="0"
                              type="button"
                            >
                              Not mine
                            </button>
                          </div>
                        </div>
                      </div>
                      <hr
                        class="MuiDivider-root MuiDivider-fullWidth css-zww2ny-MuiDivider-root"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-sm-3 css-1stxm6x-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-2iyoae-MuiGridLegacy-root"
            >
              <div
                class="MuiTypography-root MuiTypography-h6 StandardRighthandCard-title css-j4livs-MuiTypography-root"
              >
                Refine results
              </div>
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
            >
              <hr
                class="MuiDivider-root MuiDivider-fullWidth css-nvjyq9-MuiDivider-root"
              />
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
            >
              <div
                class="facetsFilter"
                data-testid="facets-filter"
                id="facets-filter"
              >
                <nav
                  class="MuiList-root MuiList-padding MuiList-dense css-b7dj7n-MuiList-root"
                >
                  <div
                    class="MuiListItem-root MuiListItem-dense MuiListItem-gutters css-19f6boz-MuiListItem-root"
                  >
                    <div
                      aria-expanded="false"
                      class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-dense MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-dense MuiListItemButton-gutters css-jscz35-MuiButtonBase-root-MuiListItemButton-root"
                      data-testid="clickable-facet-category-display-type"
                      id="clickable-facet-category-display-type"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        class="MuiListItemText-root MuiListItemText-dense css-cfq8qh-MuiListItemText-root"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body2 css-yezk6h-MuiTypography-root"
                          data-testid="facet-category-display-type"
                          id="facet-category-display-type"
                        >
                          Work type
                        </p>
                      </div>
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                        data-testid="expand-more-facet-category-display-type"
                        focusable="false"
                        id="expand-more-facet-category-display-type"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="MuiListItem-root MuiListItem-dense MuiListItem-gutters css-19f6boz-MuiListItem-root"
                  >
                    <div
                      aria-expanded="false"
                      class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-dense MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-dense MuiListItemButton-gutters css-jscz35-MuiButtonBase-root-MuiListItemButton-root"
                      data-testid="clickable-facet-category-keywords"
                      id="clickable-facet-category-keywords"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        class="MuiListItemText-root MuiListItemText-dense css-cfq8qh-MuiListItemText-root"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body2 css-yezk6h-MuiTypography-root"
                          data-testid="facet-category-keywords"
                          id="facet-category-keywords"
                        >
                          Keywords
                        </p>
                      </div>
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                        data-testid="expand-more-facet-category-keywords"
                        focusable="false"
                        id="expand-more-facet-category-keywords"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="MuiListItem-root MuiListItem-dense MuiListItem-gutters css-19f6boz-MuiListItem-root"
                  >
                    <div
                      aria-expanded="false"
                      class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-dense MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-dense MuiListItemButton-gutters css-jscz35-MuiButtonBase-root-MuiListItemButton-root"
                      data-testid="clickable-facet-category-date-range"
                      id="clickable-facet-category-date-range"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        class="MuiListItemText-root MuiListItemText-dense css-cfq8qh-MuiListItemText-root"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body2 css-yezk6h-MuiTypography-root"
                          data-testid="facet-category-date-range"
                          id="facet-category-date-range"
                        >
                          Published year range
                        </p>
                      </div>
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                        data-testid="expand-more-facet-category-date-range"
                        focusable="false"
                        id="expand-more-facet-category-date-range"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                        />
                      </svg>
                    </div>
                  </div>
                </nav>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component PossiblyMyRecords renders loading component while loading publication data 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container StandardPage css-164hai-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-body1 css-10k4br5-MuiTypography-root"
        data-analyticsid="page-title"
        data-testid="page-title"
        id="page-title"
      >
        Claim possible works
      </h2>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    />
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item css-sxhaxy-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
        />
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
        >
          <div
            style="padding: 8px;"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1s5ig73-MuiGridLegacy-root"
            >
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1idtt4c-MuiGridLegacy-root"
              />
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-14euy9a-MuiGridLegacy-root"
                style="text-align: center;"
              >
                <span
                  aria-label="Loading"
                  class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1jjkwrz-MuiCircularProgress-root"
                  role="progressbar"
                  style="width: 18px; height: 18px;"
                >
                  <svg
                    class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
                    viewBox="22 22 44 44"
                  >
                    <circle
                      class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
                      cx="44"
                      cy="44"
                      fill="none"
                      r="21"
                      stroke-width="2"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-14euy9a-MuiGridLegacy-root"
                style="text-align: center;"
              >
                <span
                  class="MuiTypography-root MuiTypography-h5 css-kl1ura-MuiTypography-root"
                  style="font-size: 1.33rem;"
                >
                  Searching for possibly your works
                </span>
              </div>
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1idtt4c-MuiGridLegacy-root"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
        />
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
      />
    </div>
  </div>
</div>
`;

exports[`Component PossiblyMyRecords renders loading screen while loading publication counts 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container StandardPage css-164hai-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-body1 css-10k4br5-MuiTypography-root"
        data-analyticsid="page-title"
        data-testid="page-title"
        id="page-title"
      >
        Claim possible works
      </h2>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    />
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item css-sxhaxy-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
        />
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
        >
          <div
            style="padding: 8px;"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1s5ig73-MuiGridLegacy-root"
            >
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1idtt4c-MuiGridLegacy-root"
              />
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-14euy9a-MuiGridLegacy-root"
                style="text-align: center;"
              >
                <span
                  aria-label="Loading"
                  class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1jjkwrz-MuiCircularProgress-root"
                  role="progressbar"
                  style="width: 18px; height: 18px;"
                >
                  <svg
                    class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
                    viewBox="22 22 44 44"
                  >
                    <circle
                      class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
                      cx="44"
                      cy="44"
                      fill="none"
                      r="21"
                      stroke-width="2"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-14euy9a-MuiGridLegacy-root"
                style="text-align: center;"
              >
                <span
                  class="MuiTypography-root MuiTypography-h5 css-kl1ura-MuiTypography-root"
                  style="font-size: 1.33rem;"
                >
                  Searching for possibly your works
                </span>
              </div>
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1idtt4c-MuiGridLegacy-root"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
        />
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
      />
    </div>
  </div>
</div>
`;

exports[`Component PossiblyMyRecords renders no results 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container StandardPage css-164hai-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-body1 css-10k4br5-MuiTypography-root"
        data-analyticsid="page-title"
        data-testid="page-title"
        id="page-title"
      >
        Claim possible works
      </h2>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    />
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item css-sxhaxy-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
            data-testid="standard-card-no-matching-works-found"
            id="standard-card-no-matching-works-found"
            style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
          >
            <div
              class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
            >
              <div
                class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
              >
                <h3
                  class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
                  data-testid="standard-card-no-matching-works-found-header"
                  id="standard-card-no-matching-works-found-header"
                >
                  No matching works found
                </h3>
              </div>
            </div>
            <div
              class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
              data-analyticsid="standard-card-no-matching-works-found-content"
              data-testid="standard-card-no-matching-works-found-content"
              id="standard-card-no-matching-works-found-content"
            >
              <div>
                <p>
                  No works were automatically matched for you to claim.
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component PossiblyMyRecords renders nothing while account is loading 1`] = `<div />`;
